# ChangeLog for dev-db/dabo
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Jun 2008; Geoff Clements <geoff@electron.me.uk> +dabo-0.8.4.ebuild:
  Version bump.

  12 Dec 2007; Geoff Clements <geoff@electron.me.uk> -dabo-0.8.2.ebuild,
  +dabo-0.8.3.ebuild:
  Version bump

  28 Oct 2007; Charlie Shepherd <masterdriverz@gentoo.org>
  dabo-0.8.2.ebuild:
  Quote $D.

  28 Oct 2007; Geoff Clements <geoff@electron.me.uk> -dabo-0.8.ebuild,
  +dabo-0.8.2.ebuild:
  dabo-8.2: Version bump

  10 May 2007; Ali Polatel (hawking) <polatel@gmail.com> -dabo-0.7.2.ebuild:
  Nuke old

  10 May 2007; Geoff Clements <geoff@electron.me.uk> +dabo-0.8.ebuild:
  Version bump: dabo-0.8

  15 Apr 2007; Stefan Schweizer <genstef@gentoo.org> dabo-0.7.2.ebuild:
  Remove RESTRICT=mirror, MIT license allows redistribution

  24 Jan 2007; Christian Faulhammer <opfer@gentoo.org> dabo-0.7.2.ebuild:
  add some quotes

  19 Jan 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Drop old and cosmetics

  18 Jan 2007; Geoff Clements <geoff@electron.me.uk> ChangeLog:
  dev-db/dabo: version bump
  +dabo-7.2

  28 Nov 2006; Markus Ullmann <jokey@gentoo.org> Manifest:
  Fix digest

  21 Nov 2006; Geoff Clements <geoff@electron.me.uk> ChangeLog:
  dev-db/dabo: version bump
  +dabo-0.7.1

  17 Nov 2006; Geoff Clements <geoff@electron.me.uk> ChangeLog:
  dabo: Version bump
  +dabo-0.7
  -dabo-0.6.6
  -dabo-0.6.5

  04 Nov 2006; Geoff Clements <geoff@electron.me.uk> ChangeLog:
  +dabo-0.6.6.ebuild

  23 Jun 2006; Geoff Clements <geoff@electron.me.uk> ChangeLog:
  Initial import, bug 108226
