@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Jun 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
+  dabo-0.8.4.ebuild:
+  Fix 'if use ide' syntax and die on doins failure
+
   10 Jun 2008; Geoff Clements <geoff@electron.me.uk> +dabo-0.8.4.ebuild:
   Version bump.
 
